--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Recipe Search</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js" defer></script>
   </head>
   <body>
     <nav>
