--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Search</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="module" src="main.js" defer></script>
+    <script type="module" src="./src/main.js" defer></script>
   </head>
   <body>
     <nav>
