--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         </button>
       </div>
     </section>
+    <!-- Result -->
     <section id="result" class="invisible" >
       <button  class="arrow__up">
         <svg 
