--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="#">
     <title>Recipe Search</title>
     <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./src/result.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="./src/main.js" defer></script>
   </head>
