--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./src/result.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="./src/main.js" defer></script>
+    <script type="module" src="./src/favorites.js" defer></script>
+    <script type="module" src="./src/pagination.js" defer></script>
   </head>
   <body>
     <div class="load__img">
